primeros pasos de crear plantilla